# deepFRI2

./: README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml  reviewdog.yml  sphinx.yml
docs/: conf.py  index.rst
tests/: test_toolbox.py
